--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -4,7 +4,7 @@ name: startingpoint
 description: A starting point for further customization of uBlue images. Make your own! https://ublue.it/making-your-own/
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
+base-image: ghcr.io/ublue-os/kinoite-main
 image-version: 39 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
@@ -24,11 +24,29 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
+      - hunspell-fr
+      - langpacks-fr
+      - zsh
+      - nano
       # - micro
       # - starship
+      # Virt-manager packages from bluefin-dx
+      - qemu
+      - qemu-user-binfmt
+      - virt-manager
+      - libvirt
+      - edk2-ovmf
+      - genisoimage
+      - qemu-img
+      - qemu-system-x86-core
+      - qemu-char-spice
+      - qemu-device-usb-redirect
+      - qemu-device-display-virtio-vga
+      - qemu-device-display-virtio-gpu
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
+      - tailscale
 
   - type: bling # configure what to pull in from ublue-os/bling
     install:
@@ -41,16 +59,21 @@ modules:
       # - dconf-update-service # a service unit that updates the dconf db on boot
       # - devpod # https://devpod.sh/ as an rpm
       # - gnome-vrr # enables gnome-vrr for your image
-      # - container-tools # installs container-related tools onto /usr/bin: kind, kubectx, docker-compose and kubens
+      - container-tools # installs container-related tools onto /usr/bin: kind, kubectx, docker-compose and kubens
       # - laptop # installs TLP and configures your system for laptop usage
       # - flatpaksync # allows synchronization of user-installed flatpaks, see separate documentation section
 
-
-  - type: yafti # if included, yafti and it's dependencies (pip & libadwaita)
-                #  will be installed and set up
-    custom-flatpaks: # this section is optional
-      # - Celluloid: io.github.celluloid_player.Celluloid
-      # - Krita: org.kde.krita
+  - type: fonts
+    fonts:
+      nerd-fonts:
+        - FiraCode
+        - Hack
+        - SourceCodePro
+        - Terminus
+        - JetBrainsMono
+      google-fonts:
+        - Roboto
+        - Open Sans
 
   - type: script
     scripts:
