--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -43,6 +43,7 @@ modules:
       - qemu-device-usb-redirect
       - qemu-device-display-virtio-vga
       - qemu-device-display-virtio-gpu
+      - ksysguard
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
