--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -44,6 +44,7 @@ modules:
       - qemu-device-display-virtio-vga
       - qemu-device-display-virtio-gpu
       - ksysguard
+      - pulseaudio-utils # for sunshine
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
