--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -83,7 +83,4 @@ modules:
         - Roboto
         - Open Sans
 
-  - type: script
-    scripts:
-      # this sets up the proper policy & signing files for signed images to work
-      - signing.sh
+  - type: signing # this sets up the proper policy & signing files for signed images to work fully
