added color profile support

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -45,6 +45,7 @@ modules:
       - qemu-device-display-virtio-gpu
       - ksysguard
       - pulseaudio-utils # for sunshine
+      - colord-kde
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
