--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -24,8 +24,8 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-      - hunspell-fr
-      - langpacks-fr
+      # - hunspell-fr
+      # - langpacks-fr
       - zsh
       - nano
       # - micro
@@ -43,12 +43,12 @@ modules:
       # - qemu-device-usb-redirect
       # - qemu-device-display-virtio-vga
       # - qemu-device-display-virtio-gpu
-      - ksysguard
-      - pulseaudio-utils # for sunshine
-      - colord-kde
+      # - ksysguard
+      # - pulseaudio-utils # for sunshine
+      # - colord-kde
     remove:
-      - firefox # default firefox removed in favor of flatpak
-      - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
+      # - firefox # default firefox removed in favor of flatpak
+      # - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
 
   - type: default-flatpaks
     notify: true   # Send notification after install/uninstall is finished (true/false)
